{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 17,
  "lineage": "4e85d1a8-329e-afeb-aeb9-7d3ae17aefcc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "for-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3c3654da6fcc199",
            "arn": "arn:aws:ec2:us-east-2:862066027316:elastic-ip/eipalloc-0a3c3654da6fcc199",
            "domain": "vpc",
            "id": "eipalloc-0a3c3654da6fcc199",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-138-146-138.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.146.138",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-vpc-nat-gw-eip"
            },
            "tags_all": {
              "Name": "dev-vpc-nat-gw-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wsvpc-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:862066027316:instance/i-0b472237b8c5fa67d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b472237b8c5fa67d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ohio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dd4859af6ee0d0c5",
            "private_dns": "ip-196-0-1-42.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "196.0.1.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e99f45303196d250",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d42757d8f820898b",
            "tags": {
              "Name": "dev-vpc-instance"
            },
            "tags_all": {
              "Name": "dev-vpc-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e8e2e9c7ca0918ac"
            ]
          },
          "dependencies": [
            "aws_subnet.wss-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ws-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:internet-gateway/igw-095fd637aa9fa82d3",
            "id": "igw-095fd637aa9fa82d3",
            "owner_id": "862066027316",
            "tags": {
              "Name": "dev-vpc-igw"
            },
            "tags_all": {
              "Name": "dev-vpc-igw"
            },
            "vpc_id": "vpc-0a229980d43d9cff6"
          },
          "dependencies": [
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "wss-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3c3654da6fcc199",
            "association_id": "eipassoc-09e86978c490f3362",
            "connectivity_type": "public",
            "id": "nat-0980b62d5ecffa91d",
            "network_interface_id": "eni-08fb5a5a3e575d3fa",
            "private_ip": "196.0.1.23",
            "public_ip": "3.138.146.138",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d42757d8f820898b",
            "tags": {
              "Name": "dev-vpc-nat-gw"
            },
            "tags_all": {
              "Name": "dev-vpc-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.for-nat",
            "aws_subnet.wss-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:route-table/rtb-07b079fe71f4f765e",
            "id": "rtb-07b079fe71f4f765e",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0980b62d5ecffa91d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-vpc-pri-rt"
            },
            "tags_all": {
              "Name": "dev-vpc-pri-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a229980d43d9cff6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.for-nat",
            "aws_nat_gateway.wss-nat",
            "aws_subnet.wss-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:route-table/rtb-02d277c7f2580ff62",
            "id": "rtb-02d277c7f2580ff62",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095fd637aa9fa82d3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "196.0.1.0/26",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0980b62d5ecffa91d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-vpc-pub-rt"
            },
            "tags_all": {
              "Name": "dev-vpc-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a229980d43d9cff6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.for-nat",
            "aws_internet_gateway.ws-igw",
            "aws_nat_gateway.wss-nat",
            "aws_subnet.wss-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058404b3cc5d0eec5",
            "route_table_id": "rtb-07b079fe71f4f765e",
            "subnet_id": "subnet-07effb49f4b6829d2"
          },
          "dependencies": [
            "aws_eip.for-nat",
            "aws_nat_gateway.wss-nat",
            "aws_route_table.pri-rt",
            "aws_subnet.wss-pri",
            "aws_subnet.wss-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a760c47d80ce5f1c",
            "route_table_id": "rtb-02d277c7f2580ff62",
            "subnet_id": "subnet-0d42757d8f820898b"
          },
          "dependencies": [
            "aws_eip.for-nat",
            "aws_internet_gateway.ws-igw",
            "aws_nat_gateway.wss-nat",
            "aws_route_table.pub-rt",
            "aws_subnet.wss-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wss-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:subnet/subnet-07effb49f4b6829d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "196.0.2.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07effb49f4b6829d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-pri-sub"
            },
            "tags_all": {
              "Name": "dev-vpc-pri-sub"
            },
            "vpc_id": "vpc-0a229980d43d9cff6"
          },
          "dependencies": [
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wss-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:subnet/subnet-0d42757d8f820898b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "196.0.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d42757d8f820898b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-pub-sub"
            },
            "tags_all": {
              "Name": "dev-vpc-pub-sub"
            },
            "vpc_id": "vpc-0a229980d43d9cff6"
          },
          "dependencies": [
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:vpc/vpc-0a229980d43d9cff6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "196.0.0.0/16",
            "default_network_acl_id": "acl-050aa5acbbd5ea559",
            "default_route_table_id": "rtb-065c938839c15289b",
            "default_security_group_id": "sg-0e8e2e9c7ca0918ac",
            "dhcp_options_id": "dopt-0a88cb5f54225e1b8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a229980d43d9cff6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-065c938839c15289b",
            "owner_id": "862066027316",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}